Fixed dropdowns overlapping buttons, incovenient

--- a/frontend/src/pages/clientRegister/components/Dropdown/Dropdown.module.css
+++ b/frontend/src/pages/clientRegister/components/Dropdown/Dropdown.module.css
@@ -44,18 +44,18 @@
 .options {
     position: absolute;
     cursor: pointer;
-    top: 100%;
-    transform: translateY(-4px);
+    bottom: 100%;
+    transform: translateY(4px);
     left: -1px;
     right: -1px;
     border: 1px solid #ccc;
-    border-top: none;
+    border-bottom: none;
     background-color: white;
     z-index: 1000;
     max-height: 200px;
     font-size: 0.8rem;
     overflow-y: auto;
-    border-radius: 0 0 6px 6px;
+    border-radius: 6px 6px 0 0;
 }
 
 .options li {
